chore: added bootstrap CSS to the demo

--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Demo: cn.offCanvas</title>
+	<link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap.css">
 	<link rel="stylesheet" href="off-canvas.css">
 	<style>
 		.off-canvas__nav {
