--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,7 @@
 	</div>
 
 	<script src="bower_components/angular/angular.js"></script>
-	<script src="off-canvas.js"></script>
+	<script src="off-canvas.min.js"></script>
 	<script>
 		angular.module('demoApp', ['cn.offCanvas'])
 			.factory('demoOffCanvas', function(cnOffCanvas) {
